feat(epistemic): scientific hardening invariants, Lyapunov chaos tracking, SDT Poisson jumps, EnKF data assimilation, Wasserstein tree and academic paper submission guide